# mlops-model-registry

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 43aa7442684c_add_users_table.py  add_audit_logs_table.py  add_model_cards_and_dataset_links.py  add_training_runs_table.py  d242ad00ce59_init.py
app/: audit.py  dependencies.py  main.py  models.py  schemas.py
app/auth/: dependencies.py  security.py
app/routers/: admin.py  audit.py  auth.py  experiments.py  lineage.py  model_cards.py  models.py
app/storage/: base.py  gcs.py  local.py
docs/: phase2_audit_log_testing.md  phase3_experiment_tracking_testing.md  phase5_governance_testing.md  troubleshooting.md
sdk/: README.md  setup.py
sdk/kimchi_sdk/: __init__.py  client.py
tests/: test_api.py  test_storage.py
