[project]
name = "kimchi"
version = "0.1.0"
description = "FastAPI project"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "uvicorn>=0.24.0",
    "google-cloud-storage>=3.0.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



